--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -31,6 +31,12 @@
         android:layout_height="wrap_content"
         tools:text="Wed Nov 14 11:56 EST 2018" />
 
+    <Button
+        android:id="@+id/btn_crime_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:text="17:44:23" />
+
     <CheckBox
         android:id="@+id/cb_crime_solved"
         android:layout_width="match_parent"
