--- a/app/src/main/res/values-zh/string.xml
+++ b/app/src/main/res/values-zh/string.xml
@@ -20,4 +20,8 @@
     <string name="crime_report_subject">crime处理情况报告</string>
     <string name="send_report">投诉方式</string>
     <string name="call_crime_report">电话联系</string>
+
+    <string name="crime_photo_button_description">陋习现场拍照按钮</string>
+    <string name="crime_photo_no_image_description">陋习现场照片（未拍照）</string>
+    <string name="crime_photo_image_description">陋习现场照片（已拍照）</string>
 </resources>
