--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -95,5 +95,6 @@
         android:id="@+id/cb_crime_solved"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="48dp"
         android:text="@string/crime_solved_label" />
 </LinearLayout>
